[package]
name = "ceros-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acid_io = { git = "ssh://git@github.com/Culpeper-Robotics/acid_io.git" }
cobs = { git = "ssh://git@github.com/Culpeper-Robotics/cobs-rs.git" }

[features]

use_std = []

[profile.dev]
panic = "abort"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"