[package]
name = "vexrs-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acid_io = { git = "ssh://git@github.com/Culpeper-Robotics/acid_io.git", optional = true }
anyhow = { version = "1.0", default-features = false }
cobs = { git = "ssh://git@github.com/Culpeper-Robotics/cobs-rs.git" }
bincode = { version = "2.0.0-rc.1", default-features = false, features = ["alloc", "derive"] }

[features]
default = [ "use_std" ]

use_std = []
use_acid_io = [ "acid_io" ]

[profile.dev]
panic = "abort"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
